--- a/_posts/2019-02-17-bonus.markdown
+++ b/_posts/2019-02-17-bonus.markdown
@@ -5,7 +5,7 @@ date:   2019-02-17 22:00:00 +0300
 author: nsychev
 ---
 
-Saint Petersburg, Russia and Internet, Feb 17, 2019. **[SPbCTF] Kappa** (ctftime: [1608][ctftime]), Saint Petersburg CTF Team, today announced launch of its new public financial service, the **Kappa Bonus**.
+Saint Petersburg, Russia and Internet, Feb 17, 2019. **[SPbCTF] Kappa** (ctftime: [1609][ctftime]), Saint Petersburg CTF Team, today announced launch of its new public financial service, the **Kappa Bonus**.
 
 ![Kappa Bonus Preview](/assets/img/2019-02-17-bonus.png)
 
@@ -17,10 +17,12 @@ For first month, the service will be available only for certain teams in beta mo
 
 The link to the service and full terms of service are to be clarified on the following week.
 
+In the meanwhile, we recommend to prepare for using Kappa Bonus by ordering some good things from [our shop][shop].
+
 **Public Relations**<br>
 press@kappactf.ru
 
 
-[ctftime]: https://ctftime.org/team/1608
+[ctftime]: https://ctftime.org/team/1609
 [shop]: https://kappactf.ru/shop/
 
