--- a/_posts/2019-02-17-bonus.markdown
+++ b/_posts/2019-02-17-bonus.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Launch of Kappa Bonus"
 date:   2019-02-17 22:00:00 +0300
 author: nsychev
+hidden: true
 ---
 
 Saint Petersburg, Russia and Internet, Feb 17, 2019. **[SPbCTF] Kappa** (ctftime: [1607][ctftime]), Saint Petersburg CTF Team, today announced launch of its new public financial service, the **Kappa Bonus**.
