fix mistakes in posts

--- a/_posts/2019-09-01-128-days.markdown
+++ b/_posts/2019-09-01-128-days.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "128 дней. Круглый стол RuCTF: итоги и последствия"
 date:   2019-09-01 20:19:00 +0300
 author: nsychev
-excerpt: Для многих школьников и студентов 1 сентября — это начало учебного года. Наши читатели из культурной столицы, наверное, уже увидели сегодняшний анонс нового сезона @SPbCTF. Но есть ещё один повод поговорить: ровно 128 дней назад был проведен круглый стол RuCTF.
+excerpt: "Для многих школьников и студентов 1 сентября — это начало учебного года. Наши читатели из культурной столицы, наверное, уже увидели сегодняшний анонс нового сезона @SPbCTF. Но есть ещё один повод поговорить: ровно 128 дней назад был проведен круглый стол RuCTF."
 ---
 
 *Этот текст можно использовать в соответствии с условиями лицензии [Creative Commons Attribution-ShareAlike 4.0 International][cc].*
